Upgrade rural and city detection